combined multiple tags together, but only tmp version. Trying to MILP series